--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,26 +5,29 @@
 
 trigger:
 - master
+
 variables:
   tag: '$(Build.BuildId)'
 
 pool:
   vmImage: ubuntu-latest
-stages:
--stage: BuildDokerimage
--Jobs:
- job:BuildAndPush
 
-- task: DockerInstaller@0
-  inputs:
-    dockerVersion: '17.09.0-ce'
-- task: Docker@2
-  inputs:
-    containerRegistry: '7797-docker-kuber'
-    repository: '7797/Hello-DashApp-Docker-Image'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
-    tags:'$(tag)'
+stages:
+- stage: BuildDokerimage
+  jobs:
+  - job: BuildAndPush
+    steps:
+    - task: DockerInstaller@0
+      inputs:
+        dockerVersion: '17.09.0-ce'
+    - task: Docker@2
+      inputs:
+        containerRegistry: '7797-docker-kuber'
+        repository: '7797/Hello-DashApp-Docker-Image'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
+
 - stage: Deploy
   jobs:
   - deployment: DeployToEKS
