--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,8 @@ stages:
       runOnce:
         deploy:
           steps:
+          - script: ls -lR $(System.DefaultWorkingDirectory)/myenv
+            displayName: 'List files in myenv directory'
           - task: KubernetesManifest@1
             inputs:
               action: 'deploy'
