Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
         deploy:
           steps:
           
-          - script: cp ~/myenv/deployment.yaml /home/vsts/work/1/s/myenv/
+          - script: cp $(Build.SourcesDirectory)/deployment.yaml /home/vsts/work/1/s/myenv/
             displayName: 'Copy deployment.yaml to the Artifact Staging Directory'
           - script: ls -lR /home/vsts/work/1/s/
             displayName: 'List files in the working directory'
@@ -47,5 +47,5 @@ stages:
               connectionType: 'kubernetesServiceConnection'
               kubernetesServiceConnection: 'Azure-kubernetes-connection'
               namespace: 'default'
-              manifests: '$(Build.ArtifactStagingDirectory)/deployment.yaml'
+              manifests: 'myenv/deployment.yaml'
 
