--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
         deploy:
           steps:
           
-          - script: cp $(Build.SourcesDirectory)/deployment.yaml /home/vsts/work/1/s/myenv/
+          - script: cp ~/deployment.yaml /home/vsts/work/1/s/
             displayName: 'Copy deployment.yaml to the Artifact Staging Directory'
           - script: ls -lR /home/vsts/work/1/s/
             displayName: 'List files in the working directory'
